crates/toml/tests/snapshots/invalid/string/basic-multiline-out-of-range-unicode-escape-02.stderr
TOML parse error at line 1, column 10
  |
1 | a = """\U00D80000"""
  |          ^
invalid value, expected unicode hexadecimal value
